# NeMoCode

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NEXT_AGENT_HANDOFF.md  README.md  SECURITY.md  activate.sh  defaults.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  stale-prs.yml  stale.yml
docs/: INDEX.md  UX_OVERHAUL_BRIEF.md
docs/_scripts/: sync-docs.sh
docs/agentic/: README.md  agent-toolkit.md  examples.md  guardrails.md
docs/api/: README.md  authentication.md  build-nvidia.md  endpoints.md
docs/enterprise/: README.md
docs/inference/: README.md  dynamo.md  tensorrt-llm.md  tensorrt.md  triton.md
docs/models/: README.md  digital-human.md  embedding.md  nemotron.md  speech-asr.md  speech-tts.md  video.md  vision.md  visual-genai.md
docs/nemo/: README.md  automodel.md  curator.md  data-workflows.md  export-deploy.md  microservices.md  nvidia-ecosystem-roadmap.md  rl.md  run.md  skills.md
docs/nim/: README.md  llm.md  retrieval.md  safety.md  speech.md  (+2 more)
scripts/: spark_sglang_super.sh  train_lora.py  train_qlora_30b_a3b.py
tests/: conftest.py  test_agent_control.py  test_clarify.py  test_cli.py  test_code_agent.py  test_config.py  test_context.py  test_context_compaction.py  test_coverage_expansion.py  test_credentials.py  test_customize.py  test_data_pipeline.py  test_data_workflows.py  test_delegate_spark.py  test_diff_stats.py  test_doctor.py  test_error_hints.py  test_first_run.py  test_formation_scheduling.py  test_glob.py  test_guardrails.py  test_hardware.py  test_hardware_spark.py  test_hook_execution.py  test_hooks.py  test_index.py  test_instruction_files.py  test_lsp.py  test_mcp.py  test_mcp_discovery.py  test_memory.py  test_metrics.py  test_metrics_throughput.py  test_microservice_cli.py  test_model_pull.py  test_multi_edit.py  test_nim_chat.py  test_non_text_models.py  test_permissions.py  test_registry.py  (+30 more)
(+111 files in other folders)
